reformat the code